--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
         <title>Excursion</title>
     </head>
     <body>
-        
+        <h1>Discover hidden places in the world around you</h1>
+        <p><a href="#">Download Excursion (Coming soon!)</a></p>
+        <video autoplay muted loop>
+            <source src="./resources/videos/excursion.mp4" type="video/mp4">
+        </video>
+        <h1>Your personal travel guide</h1>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <img src="./resources/images/camp.jpg" alt="tent">
+        <img src="./resources/images/phone.png" alt="phone icon">
+        <h1>Coming Soon for iPhone and Android</h1>
+        <p><a href="#">Download Excursion (Coming Soon!)</a></p>
     </body>
 </html>
