--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
         </video>
         <h1>Your personal travel guide</h1>
         <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-        <img src="./resources/images/camp.jpg" alt="tent">
-        <img src="./resources/images/phone.png" alt="phone icon">
+        <div>
+            <div class="image">
+                <img src="./resources/images/camp.jpg" alt="tent">
+            </div>
+            <div class="image">
+                <img src="./resources/images/phone.png" alt="phone icon">
+            </div>
+        </div>
         <h1>Coming Soon for iPhone and Android</h1>
         <p><a href="#">Download Excursion (Coming Soon!)</a></p>
     </body>
